log
Thu 16 May 2024 05:17:08 AM UTC: 
 sudoku.c | 90 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 82 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:19: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       Node* aux = _createNode(k);
      |                   ^~~~~~~~~~~
      |                   createNode
sudoku.c:56:19: error: initialization of ‘Node *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:71:24: error: comparison between pointer and integer [-Werror]
   71 |                if (aux == n->sudo[i][j])
      |                        ^~
sudoku.c:83:27: error: comparison between pointer and integer [-Werror]
   83 |                   if (aux == n->sudo[i][j])
      |                           ^~
cc1: all warnings being treated as errors
Compilation failed
45c0919
Thu 16 May 2024 05:18:42 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:18: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       int* aux = _createNode(k);
      |                  ^~~~~~~~~~~
      |                  createNode
sudoku.c:56:18: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:71:24: error: comparison between pointer and integer [-Werror]
   71 |                if (aux == n->sudo[i][j])
      |                        ^~
sudoku.c:83:27: error: comparison between pointer and integer [-Werror]
   83 |                   if (aux == n->sudo[i][j])
      |                           ^~
cc1: all warnings being treated as errors
Compilation failed
ec9483f
Thu 16 May 2024 06:27:57 PM UTC: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:56:7: error: unknown type name ‘node’; did you mean ‘Node’?
   56 |       node* aux = _createNode(k);
      |       ^~~~
      |       Node
sudoku.c:56:19: error: implicit declaration of function ‘_createNode’; did you mean ‘createNode’? [-Werror=implicit-function-declaration]
   56 |       node* aux = _createNode(k);
      |                   ^~~~~~~~~~~
      |                   createNode
sudoku.c:56:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:67:13: error: ‘aux’ undeclared (first use in this function)
   67 |             aux = front(l);
      |             ^~~
sudoku.c:67:13: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
065437c
Thu 16 May 2024 07:15:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
505389e
Thu 16 May 2024 07:21:46 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
4521d8f
Thu 16 May 2024 08:02:21 PM UTC: 
 sudoku.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:7: error: value computed is not used [-Werror=unused-value]
  140 |       *cont++;
      |       ^~~~~~~
sudoku.c:152:29: error: expected ‘)’ before ‘;’ token
  152 |          push(s, popFront(l);)
      |              ~              ^
      |                             )
sudoku.c:152:18: error: invalid use of void expression
  152 |          push(s, popFront(l);)
      |                  ^~~~~~~~~~~
sudoku.c:152:31: error: expected ‘;’ before ‘}’ token
  152 |          push(s, popFront(l);)
      |                               ^
      |                               ;
  153 | 
  154 |       }
      |       ~                        
cc1: all warnings being treated as errors
Compilation failed
af4c8cf
Thu 16 May 2024 08:02:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:140:7: error: value computed is not used [-Werror=unused-value]
  140 |       *cont++;
      |       ^~~~~~~
sudoku.c:152:18: error: invalid use of void expression
  152 |          push(s, popFront(l))
      |                  ^~~~~~~~~~~
sudoku.c:152:30: error: expected ‘;’ before ‘}’ token
  152 |          push(s, popFront(l))
      |                              ^
      |                              ;
  153 | 
  154 |       }
      |       ~                       
cc1: all warnings being treated as errors
Compilation failed
dafdd73
Thu 16 May 2024 08:04:49 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
799f7f0
